feat: publish content delivery api v1 (MGA-90)
